ecmascript/parser/tests/test262-error-references/fail/ab9d14c2ef38f180.js.stderr
error: Cannot assign to this
 --> $DIR/tests/test262-parser/fail/ab9d14c2ef38f180.js:1:1
  |
1 | (0, {a = 0}) = 0
  | ^^^^^^^^^^^^

